--- a/DropTrajectory.csproj
+++ b/DropTrajectory.csproj
@@ -219,13 +219,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\CameraController.cs" />
-    <Compile Include="Assets\scripts\CarController.cs" />
-    <Compile Include="Assets\scripts\GM.cs" />
-    <Compile Include="Assets\scripts\KillPlaneController.cs" />
-    <Compile Include="Assets\scripts\LevelController.cs" />
-    <Compile Include="Assets\scripts\PickupController.cs" />
-    <Compile Include="Assets\scripts\PlayerManager.cs" />
+    <Compile Include="Assets\scripts\controllers\CameraController.cs" />
+    <Compile Include="Assets\scripts\controllers\KillPlaneController.cs" />
+    <Compile Include="Assets\scripts\controllers\LevelController.cs" />
+    <Compile Include="Assets\scripts\controllers\LevelControllerOLD.cs" />
+    <Compile Include="Assets\scripts\controllers\PickupController.cs" />
+    <Compile Include="Assets\scripts\managers\GM.cs" />
+    <Compile Include="Assets\scripts\managers\PlayerManager.cs" />
     <Compile Include="Assets\scripts\PlayerMovement.cs" />
     <Compile Include="Assets\scripts\PlayerMovementOld.cs" />
   </ItemGroup>
