--- a/DropTrajectory.csproj
+++ b/DropTrajectory.csproj
@@ -220,6 +220,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\controllers\CameraController.cs" />
+    <Compile Include="Assets\scripts\controllers\CarComponentsController.cs" />
     <Compile Include="Assets\scripts\controllers\KillPlaneController.cs" />
     <Compile Include="Assets\scripts\controllers\LevelController.cs" />
     <Compile Include="Assets\scripts\controllers\LevelControllerOLD.cs" />
