--- a/DropTrajectory.csproj
+++ b/DropTrajectory.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Assets\scripts\controllers\KillPlaneController.cs" />
     <Compile Include="Assets\scripts\controllers\LevelController.cs" />
     <Compile Include="Assets\scripts\controllers\PickupController.cs" />
+    <Compile Include="Assets\scripts\debug\DebugPosition.cs" />
     <Compile Include="Assets\scripts\managers\GM.cs" />
     <Compile Include="Assets\scripts\managers\PlayerManager.cs" />
     <Compile Include="Assets\scripts\managers\UIManager.cs" />
